<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="30dp"
    android:padding="12dp">

    <TextView
        style="@style/TextViewParamsTitle"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/str_records_title"
        android:layout_gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark"/>

    <TextView
        style="@style/TextViewParamsTitle"
        android:text="@string/str_records_tips"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFetchRecordTotalNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="记录总量："/>
        <TextView
            android:id="@+id/tvRecordsTotalNum"
            style="@style/TextViewParamsValue"
            android:layout_centerVertical="true"
            android:text="--"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFetchStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/str_records_starttime"/>
        <TextView
            android:id="@+id/tvStartDateAndTime"
            style="@style/TextViewParamsValue"
            android:layout_centerVertical="true"
            android:text="--"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFetchStopTime"
            android:onClick="onClick"
            android:text="@string/str_records_stoptime"/>
        <TextView
            android:id="@+id/tvStopDateAndTime"
            style="@style/TextViewParamsValue"
            android:layout_centerVertical="true"
            android:text="--"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFetchSpO2"
            android:onClick="onClick"
            android:text="@string/str_records_spo2"/>
        <TextView
            android:id="@+id/tvSPO2Records"
            style="@style/TextViewParamsValue"
            android:layout_centerVertical="true"
            android:text="--"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFetchPulseRate"
            android:onClick="onClick"
            android:text="@string/str_records_pulse_rate"/>
        <TextView
            android:id="@+id/tvPulseRateRecords"
            style="@style/TextViewParamsValue"
            android:layout_centerVertical="true"
            android:text="--"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFetchRR"
            android:onClick="onClick"
            android:text="@string/str_records_rr"/>
        <TextView
            android:id="@+id/tvRRIntervalRecords"
            style="@style/TextViewParamsValue"
            android:layout_centerVertical="true"
            android:text="--"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFetchACC"
            android:onClick="onClick"
            android:text="@string/str_records_acc"/>
        <TextView
            android:id="@+id/tvACCRecords"
            style="@style/TextViewParamsValue"
            android:layout_centerVertical="true"
            android:text="--"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_blue_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEraseRecords"
        android:onClick="onClick"
        android:layout_gravity="center"
        android:text="@string/str_records_erase_records"
        android:textColor="@color/cpb_red"/>
</LinearLayout>